--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 02</title>
     <link rel="stylesheet" href="styles/assignment 02.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="noto-serif-font">
     <header>
+      <nav class="navbar display-flex"> 
+        <img src="assets/logo.png" alt="">
+        <ul class="nav-links display-flex">
+            <li class="nav-item"><a href="" class="nav-link home-color menu">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link text-gray menu">Shop</a></li>
+            <li class="nav-item"><a href="" class="nav-link text-gray menu">About us </a></li>
+            <li class="nav-item"><a href="" class="nav-link cart-color"><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
+        </ul>
 
+      </nav>
     </header>
     <main>
 
