--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <section class="mt-12 md:mt-32 md:flex px-6 md:px-0 items-center gap-20">
         <div class="md:relative flex-1">
             <img class="w-full" src="assets/flower-store.png" alt="Main">
-            <img  height="200" width="200" class="absolute top-[-90px] right-[-80px] hidden md:block" src="assets/trusted-badge.png"
-                alt="Overlay">
+            <img height="200" width="200" class="absolute top-[-90px] right-[-80px] hidden md:block"
+                src="assets/trusted-badge.png" alt="Overlay">
         </div>
         <div class="flex-1 mt-4 md:mt-0">
             <h1 class="text-5xl font-bold">Flower & Plants <br> Lover</h1>
@@ -117,6 +117,65 @@
                 <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
                     shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
             </ol>
+        </div>
+    </section>
+    <!-- Latest Deals Section -->
+    <section class="mt-20  px-6 md:px-0 ">
+        <h1 class="text-5xl text-center"><span class="text-orange-600">Latest</span> Deals</h1>
+        <p class="text-center text-gray-500 mt-4">Indulge your senses with the beauty and fragrance of our fresh flower
+            shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+        <!-- Cards -->
+        <div class="md:grid grid-cols-5 gap-5 mt-8">
+            <div class="col-span-2">
+                <div class="relative h-[200px] w-full rounded overflow-hidden rounded-xl">
+                    <!-- Background image -->
+                    <img src="assets/deal-bloom.png" alt="Bloom Plant" class="w-full h-full object-cover" />
+
+                    <!-- Dark overlay -->
+                    <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
+
+                    <!-- Text content -->
+                    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
+                        <h2 class="text-xl font-semibold">60% Off | Bloom Plant</h2>
+                        <button class="mt-2 underline font-medium">
+                            Shop Now
+                        </button>
+                    </div>
+                </div>
+                <div class="relative mt-5 w-full h-[200px] rounded overflow-hidden rounded-xl">
+                    <!-- Background image -->
+                    <img src="assets/deal-ana.png" alt="Bloom Plant" class="w-full h-full object-cover" />
+
+                    <!-- Dark overlay -->
+                    <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
+
+                    <!-- Text content -->
+                    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
+                        <h2 class="text-xl font-semibold">30% Off | Ana Plant</h2>
+                        <button class="mt-2 underline font-medium">
+                            Shop Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-span-3 mt-5 md:mt-0">
+                <div class="relative h-[420px] w-full rounded overflow-hidden rounded-xl">
+                    <!-- Background image -->
+                    <img src="assets/deal-zabo.png" alt="Bloom Plant" class="w-full h-full object-cover" />
+
+                    <!-- Dark overlay -->
+                    <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
+
+                    <!-- Text content -->
+                    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
+                        <h2 class="text-4xl font-semibold">25% Off | Zabo Plant</h2>
+                        <button class="mt-2 underline font-bold">
+                            Shop Now
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
