--- a/index.html
+++ b/index.html
@@ -12,177 +12,201 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="noto-serif-font md:px-8 max-w-6xl mx-auto mt-8">
-    <header>
-        <nav class="flex justify-between px-6 md:px-0 items-center">
-            <img src="assets/logo.png" alt="">
-            <ul class="flex gap-6">
-                <li class="hidden md:block"><a href="" class="">Home</a></li>
-                <li class="hidden  md:block"><a href="" class="text-gray-500">Shop</a></li>
-                <li class="hidden  md:block"><a href="" class="text-gray-500">About us </a></li>
-                <li class="mt-8 md:mt-0"><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
-            </ul>
+<body class="noto-serif-font mt-8">
+    <div class="max-w-6xl mx-auto md:px-8 ">
+        <header>
+            <nav class="flex justify-between px-6 md:px-0 items-center">
+                <img src="assets/logo.png" alt="">
+                <ul class="flex gap-6">
+                    <li class="hidden md:block"><a href="" class="">Home</a></li>
+                    <li class="hidden  md:block"><a href="" class="text-gray-500">Shop</a></li>
+                    <li class="hidden  md:block"><a href="" class="text-gray-500">About us </a></li>
+                    <li class="mt-8 md:mt-0"><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
+                </ul>
 
-        </nav>
-        <div class="mt-64 flex flex-col md:flex-row  items-center">
-            <div class="order-2 px-6 md:px-0 md:order-none">
-                <h1 class="text-5xl">ALWAYS <span class="text-orange-600">FRESH FLOWERS</span></h1>
-                <p class="text-gray-500 mt-3">Indulge your senses with the beauty and fragrance of our fresh flower
-                    shop.
-                    From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for
-                    any occasion. </p>
+            </nav>
+            <div class="mt-64 flex flex-col md:flex-row  items-center">
+                <div class="order-2 px-6 md:px-0 md:order-none">
+                    <h1 class="text-5xl">ALWAYS <span class="text-orange-600">FRESH FLOWERS</span></h1>
+                    <p class="text-gray-500 mt-3">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop.
+                        From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect
+                        for
+                        any occasion. </p>
+
+                </div>
+                <img class="order-1 md:order-none mb-4 md:mb-0" src="assets/test.png" alt="">
+            </div>
+        </header>
+
+        <!-- Plant Section -->
+        <section class="mt-20 px-6 md:px-0">
+            <h1 class="text-5xl text-center"><span class="text-orange-600">Our</span> Plants</h1>
+            <p class="text-gray-500 text-center my-4">Indulge your senses with the beauty and fragrance of our fresh
+                flower
+                shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            <!--Flower Card -->
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-5">
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+                <div class="text-center">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h1 class="mt-2">Lily Blossom</h1>
+                    <h1 class="font-bold mt-1">20 USD</h1>
+                    <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+                </div>
+
 
             </div>
-            <img class="order-1 md:order-none mb-4 md:mb-0" src="assets/test.png" alt="">
-        </div>
-    </header>
 
-    <!-- Plant Section -->
-    <section class="mt-20 px-6 md:px-0">
-        <h1 class="text-5xl text-center"><span class="text-orange-600">Our</span> Plants</h1>
-        <p class="text-gray-500 text-center my-4">Indulge your senses with the beauty and fragrance of our fresh flower
-            shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
-        <!--Flower Card -->
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-5">
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+        </section>
+
+        <!-- Plant Lover section -->
+        <section class="mt-12 md:mt-32 md:flex px-6 md:px-0 items-center gap-20">
+            <div class="md:relative flex-1">
+                <img class="w-full" src="assets/flower-store.png" alt="Main">
+                <img height="200" width="200" class="absolute top-[-90px] right-[-80px] hidden md:block"
+                    src="assets/trusted-badge.png" alt="Overlay">
             </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
+            <div class="flex-1 mt-4 md:mt-0">
+                <h1 class="text-5xl font-bold">Flower & Plants <br> Lover</h1>
+                <ol class="list-disc list-inside">
+                    <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ol>
             </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
-            </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
-            </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
-            </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
-            </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
-            </div>
-            <div class="text-center">
-                <img src="assets/sample-flower-image.png" alt="">
-                <h1 class="mt-2">Lily Blossom</h1>
-                <h1 class="font-bold mt-1">20 USD</h1>
-                <button class="p-2 w-full bg-orange-600 mt-4 text-white">ADD TO CART</button>
-            </div>
+        </section>
+        <!-- Latest Deals Section -->
+        <section class="mt-20  px-6 md:px-0 ">
+            <h1 class="text-5xl text-center"><span class="text-orange-600">Latest</span> Deals</h1>
+            <p class="text-center text-gray-500 mt-4">Indulge your senses with the beauty and fragrance of our fresh
+                flower
+                shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
+            <!-- Cards -->
+            <div class="md:grid grid-cols-5 gap-5 mt-8">
+                <div class="col-span-2">
+                    <div class="relative h-[200px] w-full rounded overflow-hidden rounded-xl">
+                        <!-- Background image -->
+                        <img src="assets/deal-bloom.png" alt="Bloom Plant" class="w-full h-full object-cover" />
 
-        </div>
+                        <!-- Dark overlay -->
+                        <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
 
+                        <!-- Text content -->
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-white">
+                            <h2 class="text-xl font-semibold">60% Off | Bloom Plant</h2>
+                            <button class="mt-2 underline font-medium">
+                                Shop Now
+                            </button>
+                        </div>
+                    </div>
+                    <div class="relative mt-5 w-full h-[200px] rounded overflow-hidden rounded-xl">
+                        <!-- Background image -->
+                        <img src="assets/deal-ana.png" alt="Bloom Plant" class="w-full h-full object-cover" />
 
-    </section>
+                        <!-- Dark overlay -->
+                        <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
 
-    <!-- Plant Lover section -->
-    <section class="mt-12 md:mt-32 md:flex px-6 md:px-0 items-center gap-20">
-        <div class="md:relative flex-1">
-            <img class="w-full" src="assets/flower-store.png" alt="Main">
-            <img height="200" width="200" class="absolute top-[-90px] right-[-80px] hidden md:block"
-                src="assets/trusted-badge.png" alt="Overlay">
-        </div>
-        <div class="flex-1 mt-4 md:mt-0">
-            <h1 class="text-5xl font-bold">Flower & Plants <br> Lover</h1>
-            <ol class="list-disc list-inside">
-                <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
-                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
-                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                <li class="mt-6 text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower
-                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-            </ol>
-        </div>
-    </section>
-    <!-- Latest Deals Section -->
-    <section class="mt-20  px-6 md:px-0 ">
-        <h1 class="text-5xl text-center"><span class="text-orange-600">Latest</span> Deals</h1>
-        <p class="text-center text-gray-500 mt-4">Indulge your senses with the beauty and fragrance of our fresh flower
-            shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-
-        <!-- Cards -->
-        <div class="md:grid grid-cols-5 gap-5 mt-8">
-            <div class="col-span-2">
-                <div class="relative h-[200px] w-full rounded overflow-hidden rounded-xl">
-                    <!-- Background image -->
-                    <img src="assets/deal-bloom.png" alt="Bloom Plant" class="w-full h-full object-cover" />
-
-                    <!-- Dark overlay -->
-                    <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
-
-                    <!-- Text content -->
-                    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
-                        <h2 class="text-xl font-semibold">60% Off | Bloom Plant</h2>
-                        <button class="mt-2 underline font-medium">
-                            Shop Now
-                        </button>
+                        <!-- Text content -->
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
+                            <h2 class="text-xl font-semibold">30% Off | Ana Plant</h2>
+                            <button class="mt-2 underline font-medium">
+                                Shop Now
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="relative mt-5 w-full h-[200px] rounded overflow-hidden rounded-xl">
-                    <!-- Background image -->
-                    <img src="assets/deal-ana.png" alt="Bloom Plant" class="w-full h-full object-cover" />
+                <div class="col-span-3 mt-5 md:mt-0">
+                    <div class="relative h-[420px] w-full rounded overflow-hidden rounded-xl">
+                        <!-- Background image -->
+                        <img src="assets/deal-zabo.png" alt="Bloom Plant" class="w-full h-full object-cover" />
 
-                    <!-- Dark overlay -->
-                    <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
+                        <!-- Dark overlay -->
+                        <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
 
-                    <!-- Text content -->
-                    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
-                        <h2 class="text-xl font-semibold">30% Off | Ana Plant</h2>
-                        <button class="mt-2 underline font-medium">
-                            Shop Now
-                        </button>
+                        <!-- Text content -->
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
+                            <h2 class="text-4xl font-semibold">25% Off | Zabo Plant</h2>
+                            <button class="mt-2 underline font-bold">
+                                Shop Now
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-span-3 mt-5 md:mt-0">
-                <div class="relative h-[420px] w-full rounded overflow-hidden rounded-xl">
-                    <!-- Background image -->
-                    <img src="assets/deal-zabo.png" alt="Bloom Plant" class="w-full h-full object-cover" />
-
-                    <!-- Dark overlay -->
-                    <div class="absolute inset-0 bg-gray-900 opacity-40"></div>
-
-                    <!-- Text content -->
-                    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white">
-                        <h2 class="text-4xl font-semibold">25% Off | Zabo Plant</h2>
-                        <button class="mt-2 underline font-bold">
-                            Shop Now
-                        </button>
-                    </div>
+        </section>
+    </div>
+    <!-- Colorful section -->
+    <section class="mt-20">
+        <div class="bg-[url('assets/news-letter-bg.png')] bg-cover bg-center h-96 flex items-center justify-center">
+            <div class="">
+                <h1 class="text-4xl text-center text-white">Join the colorful Bunch</h1>
+                <div class="flex w-full mt-4 lg:w-[600px] overflow-hidden">
+                    <input type="email" placeholder="Enter your email"
+                        class="flex-grow px-4 py-2 text-gray-700 bg-white" />
+                    <button class="bg-orange-600 text-white px-4 py-2 hover:bg-orange-700">
+                        Subscribe
+                    </button>
                 </div>
             </div>
+
         </div>
     </section>
 
+    <!-- Footer section -->
+     <footer>
+        <div>
+            
+        </div>
+     </footer>
 
-    <footer>
-
-    </footer>
 
 </body>
 
