--- a/index.html
+++ b/index.html
@@ -201,11 +201,36 @@
     </section>
 
     <!-- Footer section -->
-     <footer>
-        <div>
-            
+    <footer class="mt-20 mb-6 max-w-6xl mx-auto px-6 md:px-8">
+        <div class="md:grid grid-cols-6">
+            <div class="col-span-2">
+                <img src="assets/logo.png" alt="">
+                <p class="text-gray-500 mt-3">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. </p>
+            </div>
+            <div class="col-span-1 text-gray-500 mt-3 md:mt-0">
+                <p>Home</p>
+                <p class="my-3">About Us</p>
+                <p>Blog</p>
+                <p class="my-3">FAQ</p>
+                <p>Contact Us</p>
+
+            </div>
+            <div class="col-span-1 text-gray-500 mt-3 md:mt-0">
+                <p>Features</p>
+                <p class="my-3">Pricing</p>
+                <p>Privacy Policy</p>
+                <p class="my-3">Terms of Service</p>
+                <p>Help Center</p>
+            </div>
+            <div class="col-span-2 mt-3 md:mt-0 flex md:justify-center gap-4">
+                <img class="h-7 w-7" src="assets/icon-linkedin.png" alt="">
+                <img class="h-5 w-5 mt-1" src="assets/icon-twitter.png" alt="">
+                <img class="h-7 w-7" src="assets/icon-facebook.png" alt="">
+                <img class="h-7 w-7" src="assets/icon-youtube.png" alt="">
+            </div>
         </div>
-     </footer>
+    </footer>
 
 
 </body>
